--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 h1, h2, h3, body {
     /* margin-top: 20px; */
     font-family: sans-serif;
@@ -96,4 +100,27 @@ button {
 .img_preview {
     width: 293px;
     cursor: pointer;
+}
+
+/* Кнопка наверх */
+#back-top{	
+    background-image: url(../image/button-top.png);
+    height: 35px;
+    width: 60px;
+	position: fixed;
+	bottom: 30px;
+    right: -13%;
+    display: block;
+    cursor: pointer;
+    opacity: 0.7;
+
+    transition-property: right;
+    transition-duration: 1s;
+    transition-timing-function: linear;
+}
+#back-top:hover {
+    opacity: 1;
+}
+#back-top.visible {
+    right: 4%;
 }
